kubernetes-manifests/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        resources:
            requests:
              memory: 100Mi
              cpu: 400m
            limits:
              memory: 100Mi
              cpu: 400m
        ports:
        - containerPort: 80
      nodeSelector:
        kubernetes.io/os: linux
