kubernetes-manifests/webhook-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mutation-webhook
  labels:
    app: mutate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mutate
  template:
    metadata:
      labels:
        app: mutate
    spec:
      containers:
      - name: webhook
        image: manilson97/mutate:latest
        ports:
        - containerPort: 443
        volumeMounts:
        - name: certs-volume
          readOnly: true
          mountPath: "/certs"
        imagePullPolicy: Always
      volumes:
      - name: certs-volume
        secret:
          secretName: admission-tls
