kubernetes-manifests/webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mutate
spec:
  selector:
    app: mutate
  ports:
  - port: 443
