kubernetes-manifests/webhook-config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook
webhooks:
  - name: validate.default.svc
    failurePolicy: Fail
    sideEffects: None
    admissionReviewVersions: ["v1","v1beta1"]
    rules:
      - apiGroups: ["apps", ""]
        resources:
          - "deployments"
        apiVersions:
          - "*"
        operations:
          - CREATE
    clientConfig:
      service:
        name: validate
        namespace: default
        path: /validate/
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVLRENDQXhDZ0F3SUJBZ0lVT2R1RWZwMHEwemVMcUhyYjhIOG9oZ3Nsbm8wd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2daSXhDekFKQmdOVkJBWVRBa0pTTVJJd0VBWURWUVFJREFsVFlXOGdVR0YxYkc4eEVqQVFCZ05WQkFjTQpDVk5oYnlCUVlYVnNiekVPTUF3R0ExVUVDZ3dGZEdWemRHVXhEakFNQmdOVkJBc01CWFJsYzNSbE1SRXdEd1lEClZRUUREQWh0YkhWemMyRjBhVEVvTUNZR0NTcUdTSWIzRFFFSkFSWVpZVzUwYjI1cGIyeDFjM05oZEdrNVFHZHQKWVdsc0xtTnZiVEFlRncweU1qQXpNREl5TXpNd01EQmFGdzB5TkRFeU1qQXlNek13TURCYU1JR1NNUXN3Q1FZRApWUVFHRXdKQ1Vq [...]
